# myfirstMCPserver

./: README.md  env.example  gitignore  pyproject.toml  server.py
src/: server.py
