[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "An MCP server that exposes OpenWeatherMap API tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "weather", "openweathermap", "claude"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
weather-mcp-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
